--- a/angular.json
+++ b/angular.json
@@ -27,11 +27,13 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "node_modules/font-awesome/scss/font-awesome.scss",
               "node_modules/bootstrap/scss/bootstrap.scss",
               "node_modules/jquery-ui-dist/jquery-ui.theme.min.css",
               "node_modules/jquery-ui-dist/jquery-ui.min.css",
-              "src/styles.scss"
+              "src/styles.scss",
+              "src/novothema.scss"
             ],
             "scripts": [
               "node_modules/jquery/dist/jquery.min.js",
@@ -85,6 +87,7 @@
             "tsConfig": "src/tsconfig.spec.json",
             "karmaConfig": "src/karma.conf.js",
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.css"
             ],
             "scripts": [],
