--- a/angular.json
+++ b/angular.json
@@ -32,6 +32,7 @@
               "node_modules/bootstrap/scss/bootstrap.scss",
               "node_modules/jquery-ui-dist/jquery-ui.theme.min.css",
               "node_modules/jquery-ui-dist/jquery-ui.min.css",
+              "node_modules/angular-bootstrap-md/scss/mdb-free.scss",
               "src/styles.scss",
               "src/novothema.scss"
             ],
@@ -39,6 +40,8 @@
               "node_modules/jquery/dist/jquery.min.js",
               "node_modules/jquery-ui-dist/jquery-ui.min.js",
               "node_modules/popper.js/dist/umd/popper.min.js",
+              "node_modules/chart.js/dist/Chart.js",
+              "node_modules/hammerjs/hammer.min.js",
               "node_modules/bootstrap/dist/js/bootstrap.min.js"
             ]
           },
