--- a/package.json
+++ b/package.json
@@ -16,14 +16,18 @@
     "@angular/common": "^6.1.0",
     "@angular/compiler": "^6.1.0",
     "@angular/core": "^6.1.0",
+    "@angular/flex-layout": "^7.0.0-beta.19",
     "@angular/forms": "^6.1.0",
     "@angular/http": "^6.1.0",
     "@angular/material": "^7.0.2",
     "@angular/platform-browser": "^6.1.0",
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
+    "@types/chart.js": "^2.7.40",
     "@types/jquery": "^3.3.22",
+    "angular-bootstrap-md": "^6.3.0",
     "bootstrap": "^4.1.3",
+    "chart.js": "^2.5.0",
     "core-js": "^2.5.4",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
